# Nvidia-Setup-Tool-for-Linux

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_appimage.sh  environment.yml  nvidia-setup-tool  nvidia-setup-tool.desktop  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt
c_source/: deploy.sh  install.sh  nlinux.c
examples/: detect_status.py  headless_install.py
nvidia_setup/: __init__.py  __main__.py  cli.py  config.py  detector.py  exceptions.py  gui.py  installer.py  logging_utils.py
tests/: __init__.py  test_cli.py  test_config.py  test_detector.py  test_exceptions.py  test_gui.py  test_installer.py  test_logging.py  test_main.py
