[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-setup-tool"
version = "2.0.0"
description = "Pure-Python library and CLI for NVIDIA GPU driver and CUDA toolkit management on Ubuntu/Debian Linux"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["nvidia", "gpu", "cuda", "driver", "linux", "ubuntu", "debian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
toml = ["tomli>=2.0; python_version < '3.11'"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "mypy>=1.7",
    "ruff>=0.1.6",
    "pre-commit>=3.5",
    "tomli>=2.0",          # For Python <3.11 TOML support in tests
]

[project.scripts]
nvidia-setup = "nvidia_setup.cli:entrypoint"

[project.urls]
Homepage = "https://github.com/Sathush504/Nvidia-Setup-Tool-for-Linux"
Repository = "https://github.com/Sathush504/Nvidia-Setup-Tool-for-Linux"
"Bug Tracker" = "https://github.com/Sathush504/Nvidia-Setup-Tool-for-Linux/issues"

# ---------------------------------------------------------------------------
# Setuptools configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["nvidia_setup*"]
exclude = ["tests*", "docs*"]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
    "--cov=nvidia_setup",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "integration: marks tests requiring a real NVIDIA GPU or system (deselect with -m 'not integration')",
    "slow: marks long-running tests",
]

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["nvidia_setup"]
omit = ["*/tests/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
]
show_missing = true

# ---------------------------------------------------------------------------
# Mypy configuration
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "setup.py"]

# ---------------------------------------------------------------------------
# Ruff (linter/formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["nvidia_setup", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]  # Tests don't need full docstrings; assert is fine

[tool.ruff.lint.pydocstyle]
convention = "google"
